--- a/example-evaluation.ipynb
+++ b/example-evaluation.ipynb
@@ -2,26 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install tabulate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +29,16 @@
     "tf.logging.set_verbosity(tf.logging.ERROR)\n",
     "config = tf.ConfigProto()\n",
     "config.gpu_options.allow_growth = True\n",
-    "tf.keras.backend.set_session(tf.Session(config=config))"
+    "tf.keras.backend.set_session(tf.Session(config=config))\n",
+    "\n",
+    "# disable warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelnames = [\n",
+    "    \"models.deeper_fcn-x1\",\n",
     "    \"models.stacked_cnn_rnn_improved-x1\",\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,20 +112,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_1 (InputLayer)         (None, 400, 1)            0         \n",
+      "_________________________________________________________________\n",
+      "conv1d (Conv1D)              (None, 196, 64)           640       \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_v1 (Batc (None, 196, 64)           256       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu (LeakyReLU)      (None, 196, 64)           0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_1 (Conv1D)            (None, 96, 32)            10272     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_v1_1 (Ba (None, 96, 32)            128       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_1 (LeakyReLU)    (None, 96, 32)            0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_2 (Conv1D)            (None, 46, 32)            5152      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_v1_2 (Ba (None, 46, 32)            128       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_2 (LeakyReLU)    (None, 46, 32)            0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_3 (Conv1D)            (None, 21, 32)            5152      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_v1_3 (Ba (None, 21, 32)            128       \n",
+      "_________________________________________________________________\n",
+      "leaky_re_lu_3 (LeakyReLU)    (None, 21, 32)            0         \n",
+      "_________________________________________________________________\n",
+      "cu_dnngru (CuDNNGRU)         (None, 21, 32)            6336      \n",
+      "_________________________________________________________________\n",
+      "cu_dnngru_1 (CuDNNGRU)       (None, 21, 16)            2400      \n",
+      "_________________________________________________________________\n",
+      "cu_dnngru_2 (CuDNNGRU)       (None, 21, 8)             624       \n",
+      "_________________________________________________________________\n",
+      "cu_dnngru_3 (CuDNNGRU)       (None, 4)                 168       \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 1)                 5         \n",
+      "_________________________________________________________________\n",
+      "lambda (Lambda)              (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 31,389\n",
+      "Trainable params: 31,069\n",
+      "Non-trainable params: 320\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "utils.get_model_from_json(get_modelpath(modelnames[-1])).summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models.deeper_fcn-x1 8.32351764234299\n",
+      "models.stacked_cnn_rnn_improved-x1 8.364179138413347\n"
+     ]
+    }
+   ],
    "source": [
     "for modelname in modelnames:\n",
     "    predictions_dl_train[modelname] = get_predictions(modelname)\n",
@@ -149,9 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results on testing data:\n",
+      "========================\n",
+      "\n",
+      " modelname                          |   mae |   std\n",
+      "------------------------------------+-------+-------\n",
+      " models.stacked_cnn_rnn_improved-x1 | 8.317 | 0.362\n",
+      " models.stacked_cnn_rnn_improved-x1 | 8.361 | 0.329\n"
+     ]
+    }
+   ],
    "source": [
     "# calculate MAE and MAPE patient-wise (for training and testing set)\n",
     "dl_results_train = np.zeros((len(modelnames), 1, 2, n_groups_train))\n",
@@ -175,10 +236,17 @@
     "    rows.append((modelname, errmean, errstd))\n",
     "\n",
     "print(\"Results on testing data:\")\n",
-    "print(\"========================\")\n",
+    "print(\"========================\\n\")\n",
     "print(tabulate(rows, tablefmt=\"presto\", floatfmt=\".3f\",\n",
     "               headers=[\"modelname\", \"mae\" if score_index==1 else \"mape\", \"std\"]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
