--- a/example-training.ipynb
+++ b/example-training.ipynb
@@ -2,26 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +15,14 @@
     "import sklearn\n",
     "from sklearn.model_selection import GroupKFold, LeaveOneGroupOut\n",
     "\n",
-    "from models import stacked_cnn_rnn_improved as architecture\n",
+    "from models import deeper_fcn as architecture\n",
     "import algorithms.heartrate as hr\n",
     "import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 400, 1) (10000,) (10000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# load data\n",
     "# x_data_train, y_data_train, groups_train = ...\n",
@@ -72,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +71,7 @@
     "\n",
     "modelname = (architecture.__name__ + \"-x{}\".format(enlarge))\n",
     "modelpath = os.path.join(\"output\", modelname)\n",
-    "os.makedirs(modelpath, exist_ok=True)\n",
-    "os.mkdir(os.path.join(modelpath, \"final\"))\n",
+    "os.makedirs(os.path.join(modelpath, \"final\"), exist_ok=True)\n",
     "\n",
     "# write model architecture to JSON file\n",
     "model = architecture.create(**model_params)\n",
@@ -93,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=3)]: Using backend LokyBackend with 3 concurrent workers.\n",
+      "[Parallel(n_jobs=3)]: Done   2 tasks      | elapsed:   13.1s\n",
+      "[Parallel(n_jobs=3)]: Done   7 tasks      | elapsed:   33.6s\n",
+      "[Parallel(n_jobs=3)]: Done  12 tasks      | elapsed:   44.1s\n",
+      "[Parallel(n_jobs=3)]: Done  19 tasks      | elapsed:  1.2min\n",
+      "[Parallel(n_jobs=3)]: Done  26 out of  28 | elapsed:  1.6min remaining:    7.4s\n",
+      "[Parallel(n_jobs=3)]: Done  28 out of  28 | elapsed:  1.8min finished\n"
+     ]
+    }
+   ],
    "source": [
     "rs = Parallel(n_jobs=3, verbose=10)(\n",
     "    delayed(process_split)(x_data_train[t_inds], y_data_train[t_inds],\n",
@@ -143,9 +145,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12.06516994,  7.90923906],\n",
+       "       [12.24843843,  7.97319389],\n",
+       "       [13.54572565,  8.56025441],\n",
+       "       [12.43106642,  8.09660937],\n",
+       "       [12.89235405,  8.46224464],\n",
+       "       [12.84064371,  8.29353937],\n",
+       "       [13.92926378,  8.83020024],\n",
+       "       [12.83810673,  8.17103714],\n",
+       "       [14.00564411,  8.93944474],\n",
+       "       [12.99247063,  8.42603769],\n",
+       "       [12.52689613,  7.99825266],\n",
+       "       [13.00469643,  8.66117743],\n",
+       "       [12.38614354,  8.30037064],\n",
+       "       [11.7570788 ,  7.55882427],\n",
+       "       [12.86287047,  8.21690826],\n",
+       "       [13.008025  ,  8.29714316],\n",
+       "       [12.22924466,  7.74526836],\n",
+       "       [13.07709925,  8.48293472],\n",
+       "       [12.38936716,  8.12894619],\n",
+       "       [14.13572796,  9.28046742],\n",
+       "       [11.78294899,  7.72729171],\n",
+       "       [11.9294967 ,  7.92972904],\n",
+       "       [12.07058457,  7.85185918],\n",
+       "       [12.63426889,  8.08966374],\n",
+       "       [13.71262795,  8.87422151],\n",
+       "       [13.19405335,  8.66145986],\n",
+       "       [12.87355714,  8.39588449],\n",
+       "       [12.72016255,  8.18050985]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model = utils.get_model_from_json(modelpath, \"model.json\")\n",
     "\n",
@@ -163,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " - 7s - loss: 532.3504 - mean_absolute_error: 15.4585 - mean_absolute_percentage_error: 23.5018\n"
+     ]
+    }
+   ],
    "source": [
     "# train one model on entire training set\n",
     "\n",
